[tool.poetry]
name = "call"
version = "0.1.0"
description = "Audio classification tool."
authors = ["Miguel Corona <miguelalex_v9@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
